# searched

./: Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  searched.toml
.github/workflows/: rust.yml
api/: main.lua  ranking.lua  result.lua  search.lua  url.lua  util.lua
plugins/: providers.toml
plugins/engines/: algolia.lua  ask.lua  dogpile.lua  duckduckgo.lua  google.lua  json.lua  json_engine.lua  mediawiki.lua  mojeek.lua  qwant.lua  rightdao.lua  stackexchange.lua  startpage.lua  stract.lua  wikipedia.lua  yahoo.lua
plugins/preprocessors/: frontends.lua
plugins/ranking/: engine.lua  multiengine.lua
plugins/scrapers/: duckduckgo.lua  google.lua  stackexchange.lua  wiby.lua  wikipedia.lua
searched-parser/: Cargo.toml
searched-parser/src/: lib.rs
src/: config.rs  crawler.rs  error.rs  favicon.rs  lib.rs  lua_api.rs  main.rs  page.rs  settings.rs  text_matcher.rs  url_cleaner.rs  web.rs
src/lua_support/: api.rs  engine.rs  mod.rs
src/modules/: favicon.rs  image_proxy.rs  text_matcher.rs  url_cleaner.rs
src/ranking/: basic.rs  mod.rs
src/scrapers/: bandcamp.rs  duckduckgo.rs  google.rs  mod.rs  stackexchange.rs
src/widgets/: calculator.rs  color.rs  dice.rs  dictionary.rs  formula.rs  games.rs  joke.rs  metronome.rs  mod.rs  password.rs  quick_access.rs  time.rs  timer.rs  unit_converter.rs  weather.rs  wikipedia.rs  xkcd.rs
static/: opensearch.xml  robots.txt
static/js/fend/: fend.esm.js  fend.esm.js.map  fend.wasm
views/: about.html  about.tera  base.html  base.tera  index.html  index.tera  main.js  results.html  results.tera  settings.html  settings.tera  style.html  template.html  template.tera
views/components/: common_header.html  result_view.html  result_view.tera  search_bar.html
views/widgets/: calculator.html  calculator.tera  color.html  color.tera  common_style.html  common_style.tera  dice.html  dice.tera  dictionary.html  dictionary.tera  formula.html  formula.tera  games.tera  joke.html  joke.tera  metronome.html  metronome.tera  password.html  password.tera  quick_access.html  quick_access.tera  time.html  time.tera  timer.html  timer.tera  unit_converter.html  weather.html  weather.tera  wikipedia.html  wikipedia.tera  xkcd.html  xkcd.tera
views/widgets/games/: asteroid_lander.tera  common_style.tera  snake.tera
