[package]
name = "searched"
version = "0.1.0"
edition = "2021"

[features]
default = ["__lua54"]
prod = ["__luau-jit", "mlua/vendored"]
__lua54 = ["mlua/lua54"]
__luau-jit = ["mlua/luau-jit"]

[dependencies]
axum = "0.7.7"
env_logger = "0.11.5"
log = "0.4.22"
#lru = "0.12.5"
once_cell = "1.20.2"
reqwest = { version = "0.12.8", features = ["cookies", "gzip", "json"] }
scraper = { version = "0.20.0", default-features = false, features = ["atomic"] }
serde = { version = "1.0.213", features = ["derive"] }
sled = "0.34.7"
#tantivy = { version = "0.22.0", default-features = false, features = [
#  "zstd-compression",
#  "mmap",
#  "stopwords",
#] }
tera = { version = "1.20.0", default-features = false }
#texting_robots = "0.2.2"
tokio = { version = "1.41.0", features = [
  "rt-multi-thread",
  "macros",
  "signal",
] }
url = "2.5.2"
serde_qs = "0.13.0"
mlua = { version = "0.10.0", features = ["async", "macros", "serialize", "send"] }
axum-macros = "0.4.2"
#piccolo = "0.3.3"
#piccolo-util = "0.3.3"
serde_json = "1.0.132"
toml = { version = "0.8.19", default-features = false, features = ["parse"] }
strfmt = "0.2.4"
fastrand = "2.1.1"

[profile.dev.package.'*']
opt-level = 3

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
debug = false
strip = true
debug-assertions = false
