[package]
name = "searched"
version = "0.1.0"
edition = "2024"

[features]
default = ["__lua54", "hot_reload"]
hot_reload = []
prod = ["__luau-jit", "mlua/vendored"]
__lua54 = ["mlua/lua54"]
__luau-jit = ["mlua/luau-jit"]

[dependencies]
tower-http = { version = "0.6.4", features = ["fs"] }
axum = { version = "0.8.1", default-features = false, features = ["form", "http1", "json", "matched-path", "original-uri", "query", "tokio", "tower-log", "macros", "multipart"] }
env_logger = "0.11.8"
log = "0.4.26"
#lru = "0.12.5"
once_cell = "1.20.3"
reqwest = { version = "0.12.15", features = ["cookies", "gzip", "json"] }
scraper = { version = "0.23.1", default-features = false, features = ["atomic"] }
serde = { version = "1.0.219", features = ["derive"] }
sled = "0.34.7"
#tantivy = { version = "0.22.0", default-features = false, features = [
#  "zstd-compression",
#  "mmap",
#  "stopwords",
#] }
tera = { version = "1.20.0", default-features = false }
#texting_robots = "0.2.2"
tokio = { version = "1.45.0", features = [
  "rt-multi-thread",
  "macros",
  "signal",
] }
url = { version = "2.5.4", features = ["serde"] }
serde_qs = "0.15.0"
mlua = { version = "0.10.3", features = ["async", "serialize", "send", "vendored"] }
axum-macros = "0.5.0"
serde_json = "1.0.140"
toml = { version = "0.8.22", default-features = false, features = ["parse"] }
fastrand = "2.3.0"
searched-parser = { version = "0.1.0", path = "searched-parser" }
fend-core = "1.5.6"
axum-extra = { version = "0.10.1", default-features = false, features = ["cookie"] }
image = { version = "0.25.6", features = ["ico", "png"], default-features = false }
chrono = { version = "0.4.41", default-features = false, features = ["clock", "now", "std"] }
base64 = "0.22.1"
regex = "1.11.1"
urlencoding = "2.1.3"
nucleo-matcher = "0.3.1"
csscolorparser = "0.7.0"
bincode = "1.3.3"
html-entities = "0.1.0"
mimalloc = "0.1.46"

[profile.dev.package.'*']
opt-level = 3

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
debug = false
strip = true
debug-assertions = false

[workspace]
members = ["searched-parser"]
default-members = ["searched-parser", ""]
